--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<hr />			
 		</div>
 		
-		<div class="eleven">
+		<div id="steps" class="eleven">
 			<h3>Siga os seguintes passos:</h3>
 			<ol>
 				<li>
