--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@
 
     <h2>Download</h2>
     <p>
-      You can download this project in either
-      <a href="https://github.com/adlayer/starterkit/zipball/master">zip</a> or
-      <a href="https://github.com/adlayer/starterkit/tarball/master">tar formats.
+      Você pode fazer download em
+      <a href="https://github.com/adlayer/starterkit/zipball/master">zip</a> ou
+      <a href="https://github.com/adlayer/starterkit/tarball/master">tar</a>
     </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
+    <p>Você também pode fazer um clone do projeto usando <a href="http://git-scm.com">Git</a>
+      por rodar:
       <pre>$ git clone git://github.com/adlayer/starterkit</pre>
     </p>
 
     <div class="footer">
-      get the source code on GitHub : <a href="https://github.com/adlayer/starterkit">adlayer/starterkit</a>
+      obtenha o código fonte no GitHub : <a href="https://github.com/adlayer/starterkit">adlayer/starterkit</a>
     </div>
 
   </div>
