--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 
     
-      <p><a href="https://github.com/adlayer/starterkit/zipball/master">Download</a> ou git clone no seu webserver e descubra como é fácil integrar o <a href="adlayer.com.br">Adlayer</a> a sua página</p>
+      <p><a href="https://github.com/adlayer/starterkit/zipball/master">Faça download e extraia</a> os arquivos no seu webserver e descubra como é fácil integrar o <a href="adlayer.com.br">Adlayer</a> a sua página</p>
     
 
       <h2>Contact</h2>
