--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 						<li>Adicione uma campanha de nome <strong>'Respeito pelo seu site'</strong>, para o anunciante <strong>'Adlayer'</strong></li>
 						<li>Deixe a campanha iniciar agora</li>
 						<li>
-							Adicione a peça <strong>'fullbanner image'</strong> para a a campanha <strong>''Respeito pelo seu site'</strong> fazendo upload do arquivo <a href="images/fullbanner.png"><strong>arquivos/fullbanner.png</strong></a>
+							Adicione a peça <strong>'fullbanner image'</strong> para a a campanha <strong>''Respeito pelo seu site'</strong> fazendo upload do arquivo <a href="images/fullbanner.png"><strong>images/fullbanner.png</strong></a>
 						</li>
 						<li>Vincule a peça no espaço publicitário <strong>'fullbanner'</strong> da página <strong>'index'</strong></li>	
 					</ul>
