--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 		</div>
 		
 		<div class="eleven">
-			<h2>Sua simples missão:</h2>
-			<h4>Mostrar uma peça publicitária no bloco abaixo:</h4>
+			<h3>Sua simples missão:</h3>
+			<h4>Mostrar uma peça publicitária no espaço abaixo:</h4>
 			
 			
 
@@ -82,9 +82,9 @@
 					<ul>
 						<li>Faça <a href="http://adlayer.com.br/join.html#/login">login</a> em sua conta <a href="http://adlayer.com.br/join.html#/login"><strong>Adlayer</strong></a></li>
 						<li>
-							Adicione um site com o nome <strong>"starterkit"</strong> e o domínio no qual irá utilizar este tutorial, por exemplo:
+							Adicione um site com o nome <strong>"starterkit"</strong> e o domínio no qual irá utilizar este tutorial.
 								<ul>
-									<li>Se for utilizar em um servidor instalado em sua máquina, utilize o domínio <strong>"localhost"</strong></li>
+									<li>por exemplo: Se for utilizar em um servidor instalado em sua máquina, utilize o domínio <strong>"localhost"</strong></li>
 								</ul>
 						</li>
 					</ul>
