--- a/index.html
+++ b/index.html
@@ -41,108 +41,24 @@
 
 	<!-- Primary Page Layout
 	================================================== -->
-
-	<!-- Delete everything in this .container and get started on your own site! -->
-
+	
 	<div class="container">
 		<div class="sixteen columns">
-			<h1 class="remove-bottom" style="margin-top: 40px"><a href="http://adlayer.com.br">Adlayer</a> starterkit<button id="focusMode">Focus mode</button></h1>
-			<h5>Versão 1.0</h5>
-			<hr />
+			<h1>Bem vindo ao Adlayer starterkit</h1>
+			<h2>A melhor maneira de se familiarizar com o <a href="#">Adlayer</a></h2>
 		</div>
-		
-		<div class="eleven">
-			<h3>Sobre o starterkit</h3>
-			<p>AdlayerStarter kit é um template/tutorial para ajudar você a entender como a integração com <a href="http://www.adlayer.com.br">Adlayer</a> funciona.
-			</p>
-		</div>
-		
-		<div class="eleven">
-			<h3>Sua simples missão:</h3>
-			<h4>Mostrar uma peça publicitária no espaço abaixo:</h4>
-			
-			
+	</div>
 
-			<div id="layout-block" style="border:2px solid #ccc;height:60px;width:400px">
-				
-				<!-- ## Insira o código do espaço publicitário na próxima linha -->
-				
-			</div>
-			
-			
-			
-			<hr />			
+	<div class="container">
+		<div class="eight columns">
+			<h5>Para quem deseja testar o Adlayer em seu próprio site:<h5>
+			<a href="#" class="button">Ver documentação</a>
 		</div>
-		
-		<div id="steps" class="eleven">
-			<h3>Siga os seguintes passos:</h3>
-			<ol>
-				<li>
-					<strong>Adicionando o site</strong>
-					<ul>
-						<li>Faça <a href="http://adlayer.com.br/join.html#/login">login</a> em sua conta <a href="http://adlayer.com.br/join.html#/login"><strong>Adlayer</strong></a></li>
-						<li>
-							Adicione um site com o nome <strong>"starterkit"</strong> e o domínio no qual irá utilizar este tutorial.
-								<ul>
-									<li>por exemplo: Se for utilizar em um servidor instalado em sua máquina, utilize o domínio <strong>"localhost"</strong></li>
-								</ul>
-						</li>
-					</ul>
-				</li>
-				<li>
-					<strong>Integrando a página</strong>
-					<ul>
-						<li>Dentro do site <strong>"starterkit"</strong>, adicione uma página chamada <strong>"home"</strong></li>
-						<li>Copie o código de integração da página</li>
-						<li>Abra o arquivo que está visualizando agora <strong>'starterkit/index.html'</strong></li>
-						<li>Cole o código da página em qualquer lugar do html</li>
-					</ul>
-				</li>
-				<li>
-					<strong>Integrando o espaço</strong>
-					<ul>
-						<li>De volta ao Adlayer, adicione um espaço publicitário chamado <strong>"fullbanner"</strong> na página <strong>"home"</strong></li>
-						<li>Copie o código do espaço publicitário</li>
-						<li>Em seu arquivo <strong>'index.html'</strong> localize onde o espaço deve ser inserido <strong>(provavelmente na linha 68)</strong> e cole o código do espaço</li>
-					</ul>
-				</li>
-				<li>
-					<strong>Vinculando a campanha</strong>
-					<ul>
-						<li>Adicione uma campanha de nome <strong>'Respeito pelo seu site'</strong>, para o anunciante <strong>'Adlayer'</strong></li>
-						<li>Deixe a campanha iniciar agora</li>
-						<li>
-							Adicione a peça <strong>'fullbanner image'</strong> para a a campanha <strong>''Respeito pelo seu site'</strong> fazendo upload do arquivo <a href="images/fullbanner.png"><strong>images/fullbanner.png</strong></a>
-						</li>
-						<li>Vincule a peça no espaço publicitário <strong>'fullbanner'</strong> da página <strong>'index'</strong></li>	
-					</ul>
-				</li>
-				<li>
-					<button id="reload">Recarregue</button>
-					<strong> seu browser, e pronto.</strong>
-				</li>
-			</ol>
-			<h4>Se você seguiu todos os passos você deverá ver a peça no espaço acima</h4>
-			<hr />
+		<div class="eight columns">
+			<h5>Se você não pode testar o Adlayer em seu site neste momento:</h5>
+			<a href="editor.html" class="button">Testar online</a>
 		</div>
-		
-		<div class="eleven">
-			<h3>Mais diversão</h3>
-			<ul>
-				<li>Adicione outras peças, de outras extensões e tamanhos</li>
-				<li>Mude o tipo do espaço</li>
-				<li>Adicione outros espaços</li>
-			</ul>
-		</div>
-		
-		<div class="eleven">
-			<h3>Dúvidas</h3>
-			Entre em contato: <a href="mailto:contato@adlayer.org">contato@adlayer.org</a>
-		</div>
-		
-		<br />
-		
-	</div><!-- container -->
+	</div>
 
 
 
