--- a/editor.html
+++ b/editor.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<script type="text/javascript">
+		WebFontConfig = { fontdeck: { id: '23216' } };
+
+		(function() {
+		  var wf = document.createElement('script');
+		  wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+		  '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+		  wf.type = 'text/javascript';
+		  wf.async = 'true';
+		  var s = document.getElementsByTagName('script')[0];
+		  s.parentNode.insertBefore(wf, s);
+		})();
+		</script>
 		<meta charset="utf-8">
 		<title>ACE in Action</title>
 	
-		<style type="text/css" media="screen">
-	    	#editor { 
-		        position: fixed;
-		        bottom: 0;
-		        right: 0;
-				width:50%;
-				height:100%;
-		    }
-			#preview {
-				color:#666;
-				font-family: arial, helvetica;
-				position:absolute;
-				left:0;
-				width:50%;
-			}
-			#preview ol > li {
-				padding:14px;
-				border-bottom:1px solid red;
-			}
-		</style>
+		<link rel="stylesheet" href="stylesheets/styles.css">
 	
 	</head>
 <body>
-	
+
+<header>
+	<img src="http://adlayer.com.br/img/logo.png" />
+</header>
+
 <div id="preview">
 
 	<h1 id="comeando-com-adlayer">Começando com Adlayer</h1>
@@ -70,7 +68,7 @@
 	      <li>Copie o código do espaço (passando o mouse sobre o nome “fullbanner”).
     		<img src="images/8.png" />
 		  </li>
-	      <li>Cole no editor ao lado na página <a class="go-to-line" href="#">76</a></li>
+	      <li>Cole no editor ao lado na linha <a class="go-to-line" href="#">76</a></li>
 	    </ul>
 	  </li>
 	  <li>Vinculando uma campanha
@@ -103,16 +101,15 @@
 		
 	A peça deve aparecer aqui:
 	<!-- Insira o código do espaço na linha seguinte -->
-	
 </div>
 
-<div id="editor">Aguarde</div>
+<div id="editor">Aguarde o editor carregar...</div>
 
-<script src="http://code.jquery.com/jquery-1.8.3.min.js" type="text/javascript" charset="utf-8"></script>    
+<script src="http://code.jquery.com/jquery-1.8.3.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="http://d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
     var editor = ace.edit("editor");
-    editor.setTheme("ace/theme/monokai");
+    editor.setTheme("ace/theme/eclipse");
     editor.getSession().setMode("ace/mode/html");
 	editor.setValue($('#preview').html());
 	
@@ -123,7 +120,10 @@
 	})
 	
 	$('#test').click(function(){
-		$('#preview').html(editor.getValue());
+		var preview = document.getElementById('preview');
+		preview.innerHTML = editor.getValue();
+		var script = document.getElementById('adlayerScript');
+		jQuery.getScript(script.src, function(){});
 	});
 </script>
 </body>
