--- a/editor.html
+++ b/editor.html
@@ -15,7 +15,7 @@
 		})();
 		</script>
 		<meta charset="utf-8">
-		<title>ACE in Action</title>
+		<title>Adlayer - Starterkit</title>
 	
 		<link rel="stylesheet" href="stylesheets/styles.css">
 	
@@ -23,7 +23,8 @@
 <body>
 
 <header>
-	<img src="http://adlayer.com.br/img/logo.png" />
+	<img id="logo" src="http://adlayer.com.br/img/logo.png" />
+	<a href="http://adlayer.com.br" id="siteLink">Ir para o site da Adlayer -></a>
 </header>
 
 <div id="preview">
@@ -32,7 +33,7 @@
 
 	<h2>Clique com o direito <a href="#">neste link</a> e salve a imagem de destino para usa-la como peça publicitária.</h2>
 
-	<h3>Faça <a href="http://adlayer.com.br/login">login</a> em sua conta Adlayer e siga os passos abaixo:</h3>
+	<h3>Faça <a target="_blank" href="http://adlayer.com.br/login">login</a> em sua conta Adlayer e siga os passos abaixo:</h3>
 
 	<ol>
 	  <li>Adicionando um site
@@ -40,7 +41,7 @@
 		<img src="images/1.png" />
 	    <ul>
 	      <li>
-			Adicione um site com o nome <strong>“Starterkit”</strong> e no campo domínio preencha com <strong>“adlayer.github.com”</strong>.
+			Adicione um site com o nome <strong>“Starterkit”</strong> e no campo domínio preencha com o domínio que está visualizando na <strong>barra de endereços</strong>.
 			<img src="images/2.png" />
 			</li>
 	    </ul>
@@ -53,7 +54,7 @@
 			Dentro do site criado (starterkit), adicione uma página chamada <strong>“Home”</strong>
 			<img src="images/4.png" />
 		  </li>
-	      <li>Copie o código de integração da página e cole no editor ao lado na linha <a class="go-to-line" href="#">1</a>
+	      <li>Copie o código de integração da página e cole no editor ao lado na linha <a class="go-to-line" href="#">#1</a>
 		    <img src="images/5.png" />
 		  </li>
 	    </ul>
@@ -61,14 +62,14 @@
 	  <li>Integrando um espaço publicitário
 		<img src="images/6.png" />
 	    <ul>
-	      <li>De volta ao Adlayer, adicione um “espaço” com o nome “fullbanner” (dentro da página Home).
+	      <li>De volta ao Adlayer, adicione um “espaço” com o nome <strong>“fullbanner”</strong> (dentro da página Home).
 			<br />
 			 <img src="images/7.png" />
 		  </li>
 	      <li>Copie o código do espaço (passando o mouse sobre o nome “fullbanner”).
     		<img src="images/8.png" />
 		  </li>
-	      <li>Cole no editor ao lado na linha <a class="go-to-line" href="#">76</a></li>
+	      <li>Cole no editor ao lado na linha <a class="go-to-line" href="#">#76</a></li>
 	    </ul>
 	  </li>
 	  <li>Vinculando uma campanha
@@ -81,7 +82,7 @@
 	      <li>Adicione “Adlayer” como novo anunciante
     		<img src="images/10.png" />
 		  </li>
-	      <li>Certifique-se que o site “Starterkit” esta marcado na segunda tela.
+	      <li>Certifique-se que o site <strong>“Starterkit”</strong> está selecionado na segunda tela.
     		<img src="images/11.png" />
 		  </li>
 	    </ul>
@@ -89,21 +90,17 @@
 	  <li>Adicionando uma peça publicitária
    		<img src="images/12.png" />
 	    <ul>
-	      <li>Adicione uma nova peça na campanha com o nome “Fullbanner imagem”</li>
+	      <li>Adicione uma nova peça na campanha com o nome <strong>“Fullbanner imagem”</strong></li>
 	      <li>Vincule a peça no espaço “Fullbanner” da página “Home” do site “Starterkit”.
 	   		<img src="images/13.png" />
 		  </li>
 	    </ul>
 	  </li>
-	</ol>
-	
-	<button id="test">Testar</button>
-		
-	A peça deve aparecer aqui:
+	</ol><button id="test">Testar</button>
 	<!-- Insira o código do espaço na linha seguinte -->
 </div>
 
-<div id="editor">Aguarde o editor carregar...</div>
+<div id="editor"><strong>Aguarde o editor carregar...</strong></div>
 
 <script src="http://code.jquery.com/jquery-1.8.3.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="http://d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
